feat: tailwindcss setup, add icons
	modified:   package-lock.json
	modified:   package.json
	new file:   public/icon-add-bookmark-144.png
	new file:   public/icon-add-bookmark-240.png
	new file:   public/icon-add-bookmark-48.png
	new file:   public/icon-add-bookmark-96.png
	modified:   public/manifest.json
	deleted:    src/index.html
	modified:   src/index.tsx
	renamed:    src/index.css -> src/popup/popup.css
	renamed:    src/App.tsx -> src/popup/popup.tsx
	new file:   tailwind.config.js
	deleted:    webpack.config.js

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,6 +5,13 @@
   "manifest_version": 3,
   "action": {
     "default_popup": "./popup.html",
-    "default_title": "youtube timestamp bookmarker"
+    "default_title": "youtube timestamp bookmarker",
+    "default_icon": "icon-add-bookmark-48.png"
+  },
+  "icons": {
+    "48": "icon-add-bookmark-48.png",
+    "96": "icon-add-bookmark-96.png",
+    "144": "icon-add-bookmark-144.png",
+    "240": "icon-add-bookmark-240.png"
   }
 }
