--- a/package.json
+++ b/package.json
@@ -22,12 +22,17 @@
     "@types/chrome": "^0.0.193",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/tailwindcss": "^3.1.0",
+    "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "postcss": "^8.4.14",
+    "postcss-loader": "^7.0.1",
     "style-loader": "^3.3.1",
+    "tailwindcss": "^3.1.6",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.73.0",
