--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,10 +8,20 @@
     "default_title": "youtube timestamp bookmarker",
     "default_icon": "icon-add-bookmark-48.png"
   },
-  "options_page": "options.html",
+  "content_scripts": [
+    {
+      "matches": [
+        "https://*.youtube.com/*"
+      ],
+      "js": [
+        "contentScript.js"
+      ]
+    }
+  ],
   "background": {
     "service_worker": "background.js"
   },
+  "options_page": "options.html",
   "permissions": [
     "tabs",
     "bookmarks",
