--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --config webpack.config.js",
-    "watch": "webpack --watch --progress --config webpack.config.js"
+    "dev": "webpack --config webpack.config.dev.js",
+    "watch": "webpack --watch --progress --config webpack.config.dev.js",
+    "build": "webpack --progress --config webpack.config.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -36,6 +37,7 @@
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-merge": "^5.8.0"
   }
 }
