add background and contetnScript, and icon
	modified:   package-lock.json
	modified:   package.json
	renamed:    public/icon-add-bookmark-144.png -> public/assets/icon-add-bookmark-144.png
	renamed:    public/icon-add-bookmark-240.png -> public/assets/icon-add-bookmark-240.png
	renamed:    public/icon-add-bookmark-48.png -> public/assets/icon-add-bookmark-48.png
	renamed:    public/icon-add-bookmark-96.png -> public/assets/icon-add-bookmark-96.png
	modified:   public/manifest.json
	modified:   src/background/background.ts
	modified:   src/contentScript/contentScript.ts
	new file:   src/utils/index.ts
	modified:   webpack.config.common.js

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,7 @@
   "action": {
     "default_popup": "popup.html",
     "default_title": "youtube timestamp bookmarker",
-    "default_icon": "icon-add-bookmark-48.png"
+    "default_icon": "assets/imagesicon-add-bookmark-144.png"
   },
   "content_scripts": [
     {
@@ -25,12 +25,25 @@
   "permissions": [
     "tabs",
     "bookmarks",
-    "unlimitedStorage"
+    "storage"
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "assets/icon-add-bookmark-48.png",
+        "assets/icon-add-bookmark-96.png",
+        "assets/icon-add-bookmark-144.png",
+        "assets/icon-add-bookmark-240.png"
+      ],
+      "matches": [
+        "https://*.youtube.com/*"
+      ]
+    }
   ],
   "icons": {
-    "48": "icon-add-bookmark-48.png",
-    "96": "icon-add-bookmark-96.png",
-    "144": "icon-add-bookmark-144.png",
-    "240": "icon-add-bookmark-240.png"
+    "48": "assets/icon-add-bookmark-48.png",
+    "96": "assets/icon-add-bookmark-96.png",
+    "144": "assets/icon-add-bookmark-144.png",
+    "240": "assets/icon-add-bookmark-240.png"
   }
 }
