--- a/package.json
+++ b/package.json
@@ -12,12 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/plugin-transform-runtime": "^7.18.6",
-    "@babel/runtime": "^7.18.6",
-    "core-js": "^3.23.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "regenerator-runtime": "^0.13.9"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
