set up for eslint
	modified:   package-lock.json
	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "webpack --config webpack.config.dev.js",
     "watch": "webpack --watch --progress --config webpack.config.dev.js",
-    "build": "webpack --progress --config webpack.config.prod.js"
+    "build": "webpack --progress --config webpack.config.prod.js",
+    "lint": "eslint ./src"
   },
   "keywords": [],
   "author": "",
@@ -25,11 +26,17 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/tailwindcss": "^3.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
+    "eslint": "^8.20.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.1",
