--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "webpack --config webpack.config.dev.js",
     "watch": "webpack --watch --progress --config webpack.config.dev.js",
     "build": "webpack --progress --config webpack.config.prod.js",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +23,12 @@
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/dom": "^8.16.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.3.0",
     "@types/chrome": "^0.0.193",
+    "@types/jest": "^28.1.6",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/tailwindcss": "^3.1.0",
@@ -38,10 +44,13 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.1",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.1.6",
+    "ts-jest": "^28.0.7",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.73.0",
